# llamapass

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  commands.txt  docker-compose.yml  entrypoint.sh  project.txt  requirements.txt
accounts/: admin.py  context_processors.py  dashboard_urls.py  forms.py  middleware.py  models.py  root_urls.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_create_profiles_for_existing_users.py  0003_invitecode_userprofile_invite_code_used.py
cli/: README.md  pyproject.toml
cli/llamapass_cli/: __main__.py  cli.py  config.py  proxy.py
config/: settings.py  urls.py
gateway/: throttle.py  urls.py  views.py
keys/: admin.py  authentication.py  models.py  views.py
keys/migrations/: 0001_initial.py  0002_apikey_expires_at.py
screens/: dashbaord1
templates/: base.html  landing.html
templates/accounts/: login.html  password_change.html  password_change_done.html  pending.html  register.html
templates/dashboard/: index.html  keys.html  test.html  usage.html  users.html
usage/: admin.py  logging.py  models.py
usage/management/commands/: cleanup_logs.py
usage/migrations/: 0001_initial.py
